--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 </head>
 <body>
     <div id="login-container">
-        <h1>Vehbi & Serap<h1>
+        <h1>Vehbi & Serap</h1>
         <h2>Giriş Yap</h2>
         <input type="text" id="username" placeholder="Kullanıcı Adı">
         <input type="password" id="password" placeholder="Şifre">
@@ -116,7 +116,7 @@
 
     <div id="content">
         <header>
-            <h1>Bizim Hikayemiz</h1>
+            <h1>Bizim Hikayemiz AŞK anıları</h1>
         </header>
 
         <main>
