--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@
         <main>
             <section class="photo-gallery">
                 <h2>Fotoğraflarımız</h2>
+                <img src="./fotoğraflar/foto4.jpg" width="300px" alt="">
+                <br>
                 <img src="./fotoğraflar/foto1.jpg" width="300px" alt="">
                 <br>
                 <img src="./fotoğraflar/foto2.jpg" width="300px" alt="">
