--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
 
-            if (username === 'serap' && password === 'altundag') {
+            if (username === 'serap' && password === 'karadag') {
                 document.getElementById('login-container').style.display = 'none';
                 document.getElementById('content').style.display = 'block';
             } else {
